# CWin32MIDI

./: .gitmodules  README.md
example/: CMakeLists.txt  main.cpp
examples/apidemo/source/: LibraryTest.cpp
source/: CWin32MIDI.cpp
